k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kiosquiut-api-groupe-3-ip-service
  namespace: $K8S_NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: kiosquiut-api-groupe-3
  ports:
    - name: http
      port: 80
      targetPort: 80
